--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
-venv
+env
 pytest_report
 pytestdebug.log
 .idea
 .pytest_cache
 __pycache__
 logfile.log
+api_logfile.log
+ui_logfile.log
+leads.txt
+int_leads.txt
+dev_test
+tests_api/api_logfile.log
+tests_api/cookies.json
+tests_api/ui_logfile.log
+files /passwords.json
+offers.csv
+offers_bans.csv
+geckodriver.log
+files/passwords.json
+pytest_html_report.html
 output.json
 archive
 .DS_Store
 .env
+cookies.json
 **cookies.json
 **__init__.py
