Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ steps:
   - task: CmdLine@2
     inputs:
       script: |
-        playwright install
+        playwright install chromium
     displayName: 'Install dependencies'
 
   - task: CmdLine@2
