--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,11 @@ parameters:
     values:
       - smoke
       - regression
+variables:
+  VMS_USER: $(ASS)
+  ASS: $(DB_PASS)
+  NAME: ${env:NAME}
+  TELEGRAM_TOKEN: $(TELEGRAM_TOKEN)
 
 schedules:
   - cron: "0 12 * * 0"
@@ -40,7 +45,7 @@ steps:
   - task: CmdLine@2
     inputs:
       script: |
-        playwright install chromium
+        playwright install
     displayName: 'Install dependencies'
 
   - task: CmdLine@2
