--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ steps:
   - task: CmdLine@2
     inputs:
       script: |
-        playwright install chromium
+        playwright install
     displayName: 'Install dependencies'
 
   - task: CmdLine@2
